--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc --project tsconfig.build.json --noEmit && vite build",
     "preview": "vite preview",
     "test": "jest",
     "test:watch": "jest --watch",
